--- a/POMSpecflow/POMSpecflow.csproj
+++ b/POMSpecflow/POMSpecflow.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Feature\RegistrationFeature.cs" />
     <Compile Include="Hooks\Hook.cs" />
     <Compile Include="PageObject\CreateAccountPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
